# ping_sites_kafka

./: .gitignore  Dockerfile.consumer  Dockerfile.producer  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
src/: config.py  consumer.py  handler.py  producer.py
tests/: __init__.py  mocks.py  test_consumer.py  test_producer.py
